--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,37 @@
 !!!
 html
   head
-    title= title
+    //- title= title
+    title Towers
+    link(rel='stylesheet', href='http://code.jquery.com/mobile/1.4.0-alpha.1/jquery.mobile-1.4.0-alpha.1.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body!= body
+
+    meta(charset="utf-8")
+
+    <!-- Sets initial viewport load and disables zooming  -->
+    meta(name="viewport", content="initial-scale=1, maximum-scale=1, user-scalable=no")
+
+    <!-- Makes your prototype chrome-less once bookmarked to your phone's home screen -->
+    meta(name="apple-mobile-web-app-capable", content="yes")
+    meta(name="apple-mobile-web-app-status-bar-style", content="black")
+
+    <!-- Set Apple icons for when prototype is saved to home screen -->
+    link(rel="apple-touch-icon-precomposed", sizes="114x114", href="touch-icons/apple-touch-icon-114x114.png")
+    link(rel="apple-touch-icon-precomposed", sizes="72x72", href="touch-icons/apple-touch-icon-72x72.png")
+    link(rel="apple-touch-icon-precomposed", sizes="57x57", href="touch-icons/apple-touch-icon-57x57.png")
+
+    script(src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false")
+
+    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js")
+    script(src="/javascripts/jquery.cookie.js")
+
+    script(src="http://code.jquery.com/mobile/1.4.0-alpha.1/jquery.mobile-1.4.0-alpha.1.min.js")        
+
+    script.
+        $(document).on("pageshow", "#sitesmap", function() { 
+          alert( 'This page was just enhanced by jQuery Mobile!' );
+          initialize();
+        });        
+
+  body
+    block body
