--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,9 @@ html
     //- title= title
     title Towers
     link(rel='stylesheet', href='http://code.jquery.com/mobile/1.4.0-alpha.1/jquery.mobile-1.4.0-alpha.1.min.css')
+    //- link(rel='stylesheet', href='http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    //- link(rel='stylesheet', href='/stylesheets/whhg.css')
 
     meta(charset="utf-8")
 
@@ -26,6 +28,8 @@ html
     script(src="/javascripts/jquery.cookie.js")
 
     script(src="http://code.jquery.com/mobile/1.4.0-alpha.1/jquery.mobile-1.4.0-alpha.1.min.js")        
+    //- script(src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js")   
+    script(src="http://maps.stamen.com/js/tile.stamen.js?v1.2.3")
 
     script.
         $(document).on("pageshow", "#sitesmap", function() { 
