--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,12 @@ html
   head
     //- title= title
     title Towers
-    link(rel='stylesheet', href='http://code.jquery.com/mobile/1.4.0-alpha.1/jquery.mobile-1.4.0-alpha.1.min.css')
+    link(rel='stylesheet', href='http://code.jquery.com/mobile/1.4.0-alpha.2/jquery.mobile-1.4.0-alpha.2.min.css')
     //- link(rel='stylesheet', href='http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    //- link(rel='stylesheet', href='/stylesheets/jquery.sidr.dark.css')
     //- link(rel='stylesheet', href='/stylesheets/whhg.css')
 
     meta(charset="utf-8")
@@ -25,16 +28,19 @@ html
     script(src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false")
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js")
+    script(src="/javascripts/bootstrap.min.js")
     script(src="/javascripts/jquery.cookie.js")
+    script(src="/javascripts/enquire.js")
+    //- script(src="/javascripts/jquery.sidr.min.js")
 
-    script(src="http://code.jquery.com/mobile/1.4.0-alpha.1/jquery.mobile-1.4.0-alpha.1.min.js")        
+    script(src="http://code.jquery.com/mobile/1.4.0-alpha.2/jquery.mobile-1.4.0-alpha.2.min.js")        
     //- script(src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js")   
     script(src="http://maps.stamen.com/js/tile.stamen.js?v1.2.3")
 
-    script.
-        $(document).on("pageshow", "#sitesmap", function() { 
-          //- initialize();
-        });      
+    //- script.
+    //-     $(document).on("pageshow", "#sitesmap", function() { 
+    //-       initialize();
+    //-     });      
 
   body
     block body
