--- a/views/main.jade
+++ b/views/main.jade
@@ -33,7 +33,7 @@ block body
                 span.ui-btn-text Home
               span.ui-icon.ui-icon-grid.ui-icon-shadow &nbsp;
           li
-            a(href="/markets/1", data-icon="star", data-corners="false", data-shadow="false", data-iconshadow="true", data-wrapperels="span", data-iconpos="top", data-theme="a", data-inline="true", class="ui-btn ui-btn-inline ui-btn-icon-top ui-btn-up-a")
+            a(href="/markets/1", data-icon="grid", data-corners="false", data-shadow="false", data-iconshadow="true", data-wrapperels="span", data-iconpos="top", data-theme="a", data-inline="true", class="ui-btn ui-btn-inline ui-btn-icon-top ui-btn-up-a")
               span.ui-btn-inner 
                 span.ui-btn-text Markets
               span.ui-icon.ui-icon-grid.ui-icon-shadow &nbsp;
