--- a/views/markets.jade
+++ b/views/markets.jade
@@ -7,6 +7,44 @@ block body
       h1 Towers
 
     //- img.main-image(src="/images/network.png", width="100%", height="300px")
+
+    //- "items": [
+    //-         {
+    //-             "Latitude": "37.771305",
+    //-             "Longitude": "-121.963917",
+    //-             "MarketAddress": "2430 Camino Ramon, Suite 240",
+    //-             "MarketCity": "San Ramon",
+    //-             "MarketId": 4,
+    //-             "MarketCode": "NORCAL",
+    //-             "MarketKey": 635,
+    //-             "MarketManager": "Andy Millunzi",
+    //-             "MarketName": "Northern California",
+    //-             "MarketState": "CA",
+    //-             "MarketZip": "94583",
+    //-             "AllSites": 803,
+    //-             "CefaAssessments": 54,
+    //-             "CefaCompleted": 27,
+    //-             "CqiDqrPassRate": 91.4,
+    //-             "CqiFcPassRate": 98.2951,
+    //-             "CqiPassingRate": 97.3239,
+    //-             "Employees": 137,
+    //-             "LostWorkDayCases": 0,
+    //-             "RecordableEventCases": 0,
+    //-             "PurchaseOrdersInPlace": 667,
+    //-             "LeasePending": 510,
+    //-             "LeaseSigned": 415,
+    //-             "ZoningSubmitted": 586,
+    //-             "ZoningApproved": 507,
+    //-             "SiteAcquisitionReleasedToConstruction": 314,
+    //-             "DesignVisitComplete": 0,
+    //-             "IssuedForConstruction": 417,
+    //-             "ConstructionStarted": 267,
+    //-             "ConstructionComplete": 184,
+    //-             "TurnoverPackageComplete": 5,
+    //-             "FinalSiteAcceptanceReceived": 2,
+    //-             "SiteReadyForEquipment": 215
+    //-         }
+            
     div(data-role="content")
       section.above-list
       ul(data-role="listview")
@@ -32,7 +70,7 @@ block body
                 span.ui-btn-text Home
               span.ui-icon.ui-icon-grid.ui-icon-shadow &nbsp;
           li
-            a(href="/markets/1", data-icon="star", data-corners="false", data-shadow="false", data-iconshadow="true", data-wrapperels="span", data-iconpos="top", data-theme="a", data-inline="true", class="ui-btn ui-btn-inline ui-btn-icon-top ui-btn-up-a")
+            a(href="/markets/1", data-icon="grid", data-corners="false", data-shadow="false", data-iconshadow="true", data-wrapperels="span", data-iconpos="top", data-theme="a", data-inline="true", class="ui-btn ui-btn-inline ui-btn-icon-top ui-btn-up-a")
               span.ui-btn-inner 
                 span.ui-btn-text Markets
               span.ui-icon.ui-icon-grid.ui-icon-shadow &nbsp;
