--- a/views/feed.jade
+++ b/views/feed.jade
@@ -3,7 +3,7 @@ extends layout
 block body       
 
   div(data-role="page")
-    div(data-role="header", data-theme="b")
+    div.ui-bar(data-role="header", data-theme="b", data-position="fixed")
       h1 Knights on Bikes
       a.ui-btn-left(href="#", onclick="javascript:window.history.back();", data-icon="arrow-l", data-mini="true", data-role="button", data-inline="true") Back
       
