--- a/views/home.jade
+++ b/views/home.jade
@@ -3,11 +3,11 @@ extends layout
 block body       
 
   div(data-role="page")
-    div(data-role="header", data-theme="b")
+    div.ui-bar(data-role="header", data-theme="b", data-position="fixed")
       h1 Knights on Bikes
       // a(href="/logout", data-icon="home") States
 
-    img.main-image(src="/images/#{state}.png", width="100%", height="200px")
+    img.main-image(src="/images/#{state}.png", width="100%", height="200px", data-position="fixed")
 
     div(data-role="content")
       section.above-list
