--- a/views/index.jade
+++ b/views/index.jade
@@ -3,13 +3,17 @@ extends layout
 block body
 
   div(data-role="page")
-    div(data-role="header", data-theme="b")
+    div.ui-bar(data-role="header", data-theme="b", data-position="fixed")
       h1 Knights on Bikes
       //- a(href="/", data-icon="home") Home
 
-    div(style="background-color:#fff;", width="100%", height="300px")
-      center
-        img.main-image(src="/images/knights_on_bikes-decals_11.jpg", height="300px")
+    // div(style="background-color:#fff;", width="100%", height="300px")
+    //   center
+    //     img.main-image(src="/images/knights_on_bikes-decals_11.jpg", height="300px")
+
+    img.main-image(src="/images/knights_on_bikes-decals_11.jpg", width="100%", height="200px", data-position="fixed")
+
+
     div(data-role="content")
       section.above-list
         h3 Select a State:
