--- a/views/settings.jade
+++ b/views/settings.jade
@@ -3,7 +3,7 @@ extends layout
 block body       
 
   div(data-role="page")
-    div(data-role="header", data-theme="b")
+    div.ui-bar(data-role="header", data-theme="b", data-position="fixed")
       h1 Knights on Bikes
 
     div(style="background-color:#fff;", width="100%", height="300px")
